--- a/public/burger.html
+++ b/public/burger.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Ivo Deli</title>
+    <title>Burger - Ivo Deli</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="./images/IVO logo thumbnail.jpg">
@@ -137,6 +137,11 @@
         document.getElementById("english").onclick = function(){
             window.location.hash = '#eng';
             window.location.reload();
+        }
+        if(window.location.hash == '#hotdog') {
+            setTimeout(function() { 
+                $('html, body').animate({ scrollTop: document.getElementById('products-cards-hotdog').offsetTop }, 1000); 
+                },500)
         }
     </script>
     <script src="loadImage.js"></script>
