--- a/public/gelato.html
+++ b/public/gelato.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Ivo Deli</title>
+    <title>Gelato - Ivo Deli</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="./images/IVO logo thumbnail.jpg">
