--- a/public/services.html
+++ b/public/services.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Ivo Deli</title>
+    <title>Services - Ivo Deli</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="./images/IVO logo thumbnail.jpg">
     <link rel="stylesheet" type="text/css" href="styles/loader.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/homepage.css">
+    <link rel="stylesheet" type="text/css" href="styles/services.css">
 </head>
 
 <body>
-    <div class="loader-wrapper" id="loader-wrapper">
-        <span class="loader">
-            <div class="loading-burger slide-in-top-4"><img style="width: 100%;" src="./images/Burger 4.png"></div>
-            <div class="loading-burger slide-in-top-3"><img style="width: 100%;" src="./images/Burger 3.png"></div>
-            <div class="loading-burger slide-in-top-2"><img style="width: 100%;" src="./images/Burger 2.png"></div>
-            <div class="loading-burger slide-in-top-1"><img style="width: 100%;" src="./images/Burger 1.png"></div>
-        </span>
-    </div>
     <div id="content" style="display: none;">
         <div class="burger-navigator">
             <div><img id="burger-nav" src="./images/Burger Icon.png"></div>
@@ -43,100 +35,28 @@
                             style="height: 40px; padding-top: 10px;" src="images/Eng-icon.jpg"></a>
                 </div>
             </nav>
-            <div class="cover-container">
-                <div
-                    style="display: block; border-radius: 30px; width: 86%; height: 700px; margin-left: 7%; margin-top: 50px;">
-                    <div class="slidershow middle">
-
-                        <div class="slides">
-                            <input type="radio" name="r" id="r1" checked>
-                            <input type="radio" name="r" id="r2">
-                            <input type="radio" name="r" id="r3">
-                            <input type="radio" name="r" id="r4">
-                            <input type="radio" name="r" id="r5">
-                            <div class="slide s1">
-                                <img src="./images/1.jpg" alt="">
-                            </div>
-                            <div class="slide">
-                                <img src="./images/2.jpg" alt="">
-                            </div>
-                            <div class="slide">
-                                <img src="./images/3.jpg" alt="">
-                            </div>
-                            <div class="slide">
-                                <img src="./images/4.jpg" alt="">
-                            </div>
-                            <div class="slide">
-                                <img src="./images/5.jpg" alt="">
-                            </div>
-                        </div>
-
-                        <div class="navigation">
-                            <label for="r1" class="bar"></label>
-                            <label for="r2" class="bar"></label>
-                            <label for="r3" class="bar"></label>
-                            <label for="r4" class="bar"></label>
-                            <label for="r5" class="bar"></label>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div style="text-align: center; margin-top: 100px;" >
-                <ul style="font-size: 90pt; font-family: 'Masterplan'; color: #ffffff;">here we have</ul>\
+                <ul style="font-size: 140pt; font-family: 'Masterplan'; color: #ffffff;">OUR SERVICES</ul>
+                <ul style="font-size: 30pt; font-family: 'Masterplan'; color: #ffffff; margin-top: 20px; opacity: 80%;">HERE WE HAVE MANY KINDS OF FOODS.</ul>
             </div>
             <div class="products-cards" id="products-cards">
                 <a class="product-card" href="./burger"><img style="width: 100%;" src="images/Burgers-card.png"></a>
+                <a class="product-card" href="./burger#hotdog"><img style="width: 100%;" src="images/Hotdogs-card.png"></a>
                 <a class="product-card" href="./pizza"><img style="width: 100%;" src="images/Pizzas-card.png"></a>
                 <a class="product-card" href="./gelato"><img style="width: 100%;" src="images/Gelato-card.png"></a>
             </div>
-            <div class="blank-space-resize"></div>
         </div>
-        <div class="meat" style="margin-top: 100px;">
-            <div style="width: 100%; display: flex; padding-top: 8%; padding-left: 30px;">
-                <img style="width: 55%" src="./images/Provide-Text.png">
+        <div style="text-align: center; margin-top: 70px; width: 100%;" >
+            <ul style="font-size: 90pt; font-family: 'Masterplan'; color: #ad2d2d;">YOU CAN FIND US ON</ul>
+            <div class="products-cards">
+                <div>Facebook</div>
+                <div>Foody</div>
+                <div>Grab Food</div>
+                <div>Loship</div>
             </div>
-            <ul id="meat-text"
-                style="font-family: 'UVNSachVo'; color: #e3e3e3; margin-left: 30px; margin-top: 30px; font-size: 19px; color: darkgray;">
-                All meat we’re
-                using is bought once every 2 morning</br>
-                and chosen very carefully.</br>
-                We provide delicious burgers with good meat</br>
-                for pleasing our customers.</ul>
-            <div class="blank-space-resize"></div>
-            <div class="blank-space-resize"></div>
-            <div class="blank-space-resize"></div>
-            <div class="blank-space-resize"></div>
         </div>
-
-        <div class="fresh-gelato">
-            <div id="fresh-gelato">
-                <div class="blank-space-resize"></div>
-                <div class="blank-space-resize"></div>
-                <div class="quality-card">
-                    <img class="icon-quality" src="./images/LogoHighRated.png">
-                    <div class="icon-quality-text" id="icon-quality-text-1">Highly rated</div>
-                </div>
-                <div class="quality-card">
-                    <img class="icon-quality" src="./images/Logo-DailyMade.png">
-                    <div class="icon-quality-text" id="icon-quality-text-2">Daily made</div>
-                </div>
-                <div class="quality-card">
-                    <img class="icon-quality" src="./images/Logo-HighQualityControl.png">
-                    <div class="icon-quality-text" id="icon-quality-text-3">High quality control</div>
-                </div>
-                <div class="quality-card">
-                    <img class="icon-quality" src="./images/Logo-Natural.png">
-                    <div class="icon-quality-text" id="icon-quality-text-4">100% Natural</div>
-                </div>
-                <div class="quality-card">
-                    <img class="icon-quality" src="./images/Logo-Italian.png">
-                    <div class="icon-quality-text" id="icon-quality-text-5">Italian recipes</div>
-                </div>
-                <div class="blank-space-resize"></div>
-                <div class="blank-space-resize"></div>
-                <div class="blank-space-resize"></div>
-                <div class="blank-space-resize"></div>
-            </div>
+        <div style="text-align: center; margin-top: 100px; width: 100%; font-size: 80pt; font-family: 'Masterplan'; color: #005180;">
+            WE also have pizza and gelato for wholesale
         </div>
         <div>
             <ul style="font-size: 90pt; font-family: 'Masterplan'; margin-left: 7vw; color: #6d3109;">WHERE ARE WE</ul>
@@ -228,9 +148,8 @@
     <script>
         try {
             $(window).on("load", window.setTimeout(function () {
-                $(".loader-wrapper").fadeOut("slow");
                 document.getElementById("content").style = null;
-            }, 1500));
+            }, 100));
         } catch (e) { };
     </script>
     <script type="text/javascript">
