--- a/public/services.html
+++ b/public/services.html
@@ -46,16 +46,29 @@
                 <a class="product-card" href="./gelato"><img style="width: 100%;" src="images/Gelato-card.png"></a>
             </div>
         </div>
-        <div style="text-align: center; margin-top: 70px; width: 100%;" >
-            <ul style="font-size: 90pt; font-family: 'Masterplan'; color: #ad2d2d;">YOU CAN FIND US ON</ul>
+        <div class="find-on" >
+            <ul style="font-size: 90pt; color: #ad2d2d;">YOU CAN FIND US ON</ul>
             <div class="products-cards">
-                <div>Facebook</div>
-                <div>Foody</div>
-                <div>Grab Food</div>
-                <div>Loship</div>
+                <div class="channel-card"><a href="https://www.facebook.com/ivodelidanang/">
+                    <ul style="color: #005180;">facebook</ul>
+                    <img src="./images/IconFacebookColored.png">
+                </a></div>
+                <div class="channel-card"><a href="https://www.foody.vn/thuong-hieu/ivo-deli-banh-mi-hotdog-kem-y-gelato">
+                    <ul style="color: #ad2d2d;">Foody</ul>
+                    <img src="./images/IconFoodyColored.png">
+                </a></div>
+                <div class="channel-card"><a href="https://food.grab.com/vn/en/restaurant/ivo-deli-burger-kem-%C3%BD-gelato-l%C3%AA-th%C3%A1nh-t%C3%B4n-delivery/VNGFVN000008kt">
+                    <ul style="color: #159b27;">Grab Food</ul>
+                    <img src="./images/IconGrabColored.png">
+                </a></div>
+                <div class="channel-card"><a href="https://www.facebook.com/ivodelidanang/">
+                    <ul>Loship</ul>
+                    <img src="./images/IconLoshipColored.png">
+                </a></div>
             </div>
+            <div class="blank-space-resize"></div>
         </div>
-        <div style="text-align: center; margin-top: 100px; width: 100%; font-size: 80pt; font-family: 'Masterplan'; color: #005180;">
+        <div style="text-align: center; margin-top: 50px; width: 100%; font-size: 80pt; font-family: 'Masterplan'; color: #005180;">
             WE also have pizza and gelato for wholesale
         </div>
         <div>
